Initial firewall implementation (no-root mode)
- Block connections by IP, domain or app
- Add filter to show blocked connections
- Migrate IP matching to ndpi_ptree_t API
- IPv6 addresses now supported in blacklists
- Duplicate IP address rules now only counted once

--- a/app/src/main/res/layout/connection_item.xml
+++ b/app/src/main/res/layout/connection_item.xml
@@ -67,6 +67,13 @@
                     android:contentDescription="@string/malicious_connection_filter"
                     android:src="@drawable/ic_skull" />
 
+                <ImageView
+                    android:id="@+id/blocked"
+                    android:layout_width="wrap_content"
+                    android:layout_height="12sp"
+                    app:tint="@color/colorTabText"
+                    android:src="@drawable/ic_block" />
+
                 <!--<com.haipq.android.flagkit.FlagImageView
                     android:id="@+id/country_flag"
                     android:layout_width="wrap_content"
