--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -318,6 +318,25 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
                 android:textStyle="bold"
+                android:text="@string/blocked_pkts" />
+            <TextView
+                android:id="@+id/blocked_pkts"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:textIsSelectable="true"
+                tools:text="1.1 K down - 98 down" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="4dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:textStyle="bold"
                 android:text="@string/duration" />
             <TextView
                 android:id="@+id/detail_duration"
