--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -10,6 +10,10 @@
             android:title="@string/stats"
             android:icon="@drawable/ic_stacked_bar_chart" />
         <item
+            android:id="@+id/firewall"
+            android:title="@string/firewall"
+            android:icon="@drawable/ic_shield" />
+        <item
             android:id="@+id/malware_detection"
             android:title="@string/malware_detection"
             android:icon="@drawable/ic_bug" />
