Remove scrolling in the destination/host fields
Fixes #162

--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -70,7 +70,7 @@
                 android:text="@string/sni" />
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.75"
                 android:orientation="horizontal">
                 <ImageView
@@ -121,7 +121,7 @@
                 android:text="@string/destination" />
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.75"
                 android:orientation="horizontal">
                 <ImageView
