--- a/app/src/main/res/layout/unlock_dialog.xml
+++ b/app/src/main/res/layout/unlock_dialog.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textIsSelectable="true"
+            android:focusable="true"
             tools:text="A127ADC1245" />
 
         <ImageView
