--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -152,6 +152,7 @@
                     android:drawableEnd="@drawable/ic_external"
                     app:drawableTint="@color/colorPrimary"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:nextFocusDown="@id/request_data"
                     android:textSize="12sp"
                     android:text="@string/whois_lookup"/>
             </LinearLayout>
@@ -397,18 +398,20 @@
         android:text="@string/request_plaintext"/>
 
         <TextView
+            android:id="@+id/request_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorBackgroundGray"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/request_data_label"
             android:layout_marginTop="8dp"
-            android:id="@+id/request_data"
             android:padding="6sp"
             android:textIsSelectable="true"
             android:fontFamily="monospace"
             android:textSize="12sp"
             android:scrollHorizontally="true"
+            android:focusable="true"
+            android:nextFocusUp="@id/whois_ip"
             tools:text="GET / HTTP/1.1\nHost: example.org\nAccept: */*"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
