--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -333,6 +333,9 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/blocked_row"
+            android:visibility="gone"
+            tools:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="4dp">
