Improve fragments consistency while swiping
While swiping in the viewpager, the fragments onResume may haven't been
called yet. This commit initializes the status fragment before onResume and
also fixes the "No Connections" shown just briefly after the connections
fragment is shown

--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -36,7 +36,7 @@
             android:layout_marginTop="40dp"
             android:textStyle="italic"
             android:textSize="15sp"
-            android:text="@string/capture_not_started">
+            tools:text="@string/capture_not_started">
         </TextView>
 
         <com.emanuelef.remote_capture.views.EmptyRecyclerView
