Improve connections rollover notice layout

--- a/app/src/main/res/layout/connections.xml
+++ b/app/src/main/res/layout/connections.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.google.android.material.chip.ChipGroup
@@ -17,15 +17,6 @@
             android:layout_marginVertical="4dp"
             app:singleSelection="true">
         </com.google.android.material.chip.ChipGroup>
-
-        <TextView
-            android:id="@+id/old_connections_notice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textSize="15sp"
-            android:textStyle="italic"
-            tools:text="74 older connections not shown" />
 
         <TextView
             android:id="@+id/no_connections"
@@ -47,6 +38,17 @@
             android:scrollbars="vertical"
             android:scrollbarStyle="outsideOverlay"
             android:fillViewport="true" />
+
+        <TextView
+            android:id="@+id/old_connections_notice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textSize="15sp"
+            android:textStyle="italic"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="74 older connections not shown" />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
