--- a/app/src/main/res/drawable/ic_play_arrow.xml
+++ b/app/src/main/res/drawable/ic_play_arrow.xml
@@ -1,5 +1,5 @@
 <vector android:height="32dp" android:tint="?attr/colorControlNormal"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M6,6h12v12H6z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M8,5v14l11,-7z"/>
 </vector>
