--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -413,13 +413,25 @@
     </TableLayout>
 
     <TextView
+        android:id="@+id/error_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/table"
+        android:textColor="@color/danger"
+        android:textIsSelectable="true"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"
+        tools:text="The client may not trust certificate" />
+
+    <TextView
         android:id="@+id/request_data_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/table"
+        app:layout_constraintTop_toBottomOf="@id/error_msg"
         android:text="@string/request_plaintext"/>
 
         <TextView
