Add ability to export the SSL/TLS master secrets
When the TLS decryption is enabled, it's now possible to export the
SSLKEYLOGFILE to decrypt the PCAP file in Wireshark. The export only
works when the capture is running.

--- a/app/src/main/res/menu/connections_menu.xml
+++ b/app/src/main/res/menu/connections_menu.xml
@@ -29,4 +29,11 @@
         android:icon="@drawable/ic_save"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/export_sslkeylogfile"
+        android:title="@string/export_sslkeylog"
+        android:orderInCategory="40"
+        android:icon="@drawable/ic_save"
+        android:visible="false"
+        app:showAsAction="never" />
 </menu>
