--- a/app/src/main/res/layout/edit_filter_activity.xml
+++ b/app/src/main/res/layout/edit_filter_activity.xml
@@ -51,11 +51,11 @@
             android:text="@string/show_only_malicious" />
 
         <CheckBox
-            android:id="@+id/only_plaintext"
+            android:id="@+id/only_cleartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="@string/show_only_plaintext" />
+            android:text="@string/show_only_cleartext" />
 
         <TextView
             android:layout_width="wrap_content"
