--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,8 +15,13 @@
     <color name="statusClosed">#AAAAAA</color>
     <color name="statusError">#F20015</color>
     <color name="ok">#0CB350</color>
-    <color name="warning">#EC5F14</color>
+    <color name="warning">#FF9800</color>
     <color name="danger">#F80013</color>
     <color name="in_progress">#29b6f6</color>
     <color name="highContrast">#000000</color>
+    <color name="sentPayloadBg">#FBEDED</color>
+    <color name="sentPayloadFg">#7F0000</color>
+    <color name="rcvdPayloadBg">#EDEDFB</color>
+    <color name="rcvdPayloadFg">#00007F</color>
+    <color name="lightGray">#aaa</color>
 </resources>
