Simplify the payload mode preference
Turn it into a toggle which enables/disables the full payload

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -53,6 +53,13 @@
             app:defaultValue="false" />
 
         <SwitchPreference
+            app:key="full_payload"
+            app:title="@string/full_payload"
+            app:iconSpaceReserved="false"
+            app:summary="@string/full_payload_summary"
+            app:defaultValue="false" />
+
+        <SwitchPreference
             app:key="socks5_enabled"
             app:title="@string/socks5_proxy"
             app:iconSpaceReserved="false"
