Show warning if no app data is exchanged

--- a/app/src/main/res/layout/edit_filter_activity.xml
+++ b/app/src/main/res/layout/edit_filter_activity.xml
@@ -121,11 +121,11 @@
                 android:text="@string/decrypted"/>
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/dec_status_in_progress"
+                android:id="@+id/dec_status_waiting_data"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/in_progress"/>
+                android:text="@string/waiting_application_data"/>
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/dec_status_not_decryptable"
