Ability to manually download the geolocation db
This removes the bundled geolocation db, saving about 8 MB of space.
It is now possible to manually download the database from the app settings.

Closes #172

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -163,6 +163,13 @@
             app:defaultValue="system"
             app:useSimpleSummaryProvider="true"/>
 
+        <Preference
+            android:key="geolocation"
+            app:title="@string/geolocation"
+            app:summary="@string/geolocation_summary"
+            app:iconSpaceReserved="false"
+            app:fragment="com.emanuelef.remote_capture.fragments.GeoipSettings" />
+
         <SwitchPreference
             app:key="ipv6_enabled"
             app:title="@string/ipv6"
