Small ui improvements

--- a/app/src/main/res/menu/list_edit_menu.xml
+++ b/app/src/main/res/menu/list_edit_menu.xml
@@ -22,7 +22,7 @@
         android:title="@string/import_action"
         android:orderInCategory="19"
         android:icon="@drawable/ic_file_import"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/copy_to_clipboard"
