Add apps icons in lists

--- a/app/src/main/res/layout/rule_item.xml
+++ b/app/src/main/res/layout/rule_item.xml
@@ -4,8 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/activatedBackgroundIndicator"
-    android:orientation="vertical"
-    android:padding="15sp">
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
+    android:padding="10dp">
+
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:adjustViewBounds="true"
+        tools:tint="@color/colorTabText"
+        tools:src="@drawable/ic_short_text" />
 
     <TextView
         android:id="@+id/item_label"
