Add ability to unblock connections from context menu

--- a/app/src/main/res/menu/connection_context_menu.xml
+++ b/app/src/main/res/menu/connection_context_menu.xml
@@ -58,10 +58,38 @@
             <item
                 android:id="@+id/block_host"
                 android:title=""
-                tools:title="@string/host_val" />
+                tools:title="@string/host_val"
+                android:visible="false" />
 
             <item
                 android:id="@+id/block_domain"
+                android:title=""
+                tools:title="@string/host_val"
+                android:visible="false" />
+        </menu>
+    </item>
+
+    <item android:id="@+id/unblock_menu" android:title="@string/unblock">
+        <menu>
+            <item
+                android:id="@+id/unblock_app"
+                android:title=""
+                tools:title="@string/app_val"
+                android:visible="false" />
+
+            <item
+                android:id="@+id/unblock_ip"
+                android:title=""
+                tools:title="@string/ip_address_val" />
+
+            <item
+                android:id="@+id/unblock_host"
+                android:title=""
+                tools:title="@string/host_val"
+                android:visible="false" />
+
+            <item
+                android:id="@+id/unblock_domain"
                 android:title=""
                 tools:title="@string/host_val"
                 android:visible="false" />
