--- a/app/src/main/res/layout/app_overview.xml
+++ b/app/src/main/res/layout/app_overview.xml
@@ -17,8 +17,8 @@
         tools:tint="@color/colorAccent"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxHeight="80dp"
+        android:layout_height="80dp"
+        android:adjustViewBounds="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
